CREATE TABLE users (
  user_id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  google_id varchar UNIQUE NOT NULL,
  username varchar NOT NULL,
  email varchar NOT NULL,
  role_id int NOT NULL
);

CREATE TABLE roles (
  role_id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  name varchar UNIQUE NOT NULL
);

CREATE TABLE accounts (
  account_id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  user_id int NOT NULL,
  account_type_id int NOT NULL,
  balance int NOT NULL,
  created_at timestamp DEFAULT (now())
  
  CONSTRAINT min_account_balance_check CHECK(balance >= 0)
);

CREATE TABLE account_types (
  account_type_id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  name varchar
);

CREATE TABLE transactions (
  transaction_id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  transaction_reference_id int NOT NULL,
  reference varchar,
  account_id int NOT NULL,
  amount int NOT NULL,
  transaction_type_id int NOT NULL,
  created_at timestamp NOT NULL DEFAULT (now()),
  balance_after_transaction int

  CONSTRAINT min_balance_after_transaction_check CHECK(balance_after_transaction >= 0)
);

CREATE TABLE transaction_references (
  transaction_reference_id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY
);

CREATE TABLE transaction_types (
  transaction_type_id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  name varchar UNIQUE NOT NULL
);

CREATE TABLE disputes (
  dispute_id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  reason varchar NOT NULL,
  disputed_transaction_reference_id int NOT NULL,
  created_at timestamp DEFAULT (now())
);

CREATE TABLE dispute_status_history (
  dispute_history_id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  dispute_id int NOT NULL,
  dispute_status_id int NOT NULL,
  updated_at timestamp NOT NULL,
  updated_by_id int NOT NULL
);

CREATE TABLE dispute_statuses (
  dispute_status_id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  name varchar UNIQUE NOT NULL
);

COMMENT ON TABLE users IS 'Application users with assigned roles. Supports soft deletion.';

COMMENT ON COLUMN users.google_id IS 'External unique Google account ID for SSO.';

COMMENT ON TABLE roles IS 'Enumeration table of the list of roles in the system from an application perspective';

COMMENT ON TABLE accounts IS 'Financial accounts tied to users.';

COMMENT ON COLUMN accounts.balance IS 'Funds that are available for use.';

COMMENT ON TABLE account_types IS 'Defines characteristics and fees for different account models.';

COMMENT ON COLUMN account_types.name IS 'Label for the account type (e.g., savings, checking).';

COMMENT ON TABLE transactions IS 'Logs each monetary activity tied to an account with status tracking.';

COMMENT ON COLUMN transactions.transaction_reference_id IS 'used to link two (or more in the case of split payments) transactions together';

COMMENT ON COLUMN transactions.reference IS 'The reference the user will see on their own account.';

COMMENT ON TABLE transaction_references IS 'Groups related transactions under a common reference (e.g., for disputes or multi-account payments).';

COMMENT ON TABLE transaction_types IS 'Enumerates valid types of financial activities.';

COMMENT ON COLUMN transaction_types.name IS 'e.g., deposit, withdrawal, transfer, reversals';

COMMENT ON TABLE disputes IS 'Filed disputes tied to a specific transaction reference group. Business rule -> you may not dispute a dispute (reverse a reversal).';

COMMENT ON TABLE dispute_status_history IS 'Logs changes in dispute resolution status over time.';

COMMENT ON TABLE dispute_statuses IS 'Possible statuses for a dispute lifecycle.';

COMMENT ON COLUMN dispute_statuses.name IS 'e.g., open, under_review, resolved';

ALTER TABLE users ADD CONSTRAINT fk_users_roles FOREIGN KEY (role_id) REFERENCES roles (role_id);

ALTER TABLE accounts ADD CONSTRAINT fk_accounts_users FOREIGN KEY (user_id) REFERENCES users (user_id);

ALTER TABLE accounts ADD CONSTRAINT fk_accounts_account_types FOREIGN KEY (account_type_id) REFERENCES account_types (account_type_id);

ALTER TABLE transactions ADD CONSTRAINT fk_transactions_transaction_references FOREIGN KEY (transaction_reference_id) REFERENCES transaction_references (transaction_reference_id);

ALTER TABLE transactions ADD CONSTRAINT fk_transactions_accounts FOREIGN KEY (account_id) REFERENCES accounts (account_id);

ALTER TABLE transactions ADD CONSTRAINT fk_transactions_transaction_types FOREIGN KEY (transaction_type_id) REFERENCES transaction_types (transaction_type_id);

ALTER TABLE disputes ADD CONSTRAINT fk_disputes_transaction_references FOREIGN KEY (disputed_transaction_reference_id) REFERENCES transaction_references (transaction_reference_id);

ALTER TABLE dispute_status_history ADD CONSTRAINT fk_dispute_status_history_disputes FOREIGN KEY (dispute_id) REFERENCES disputes (dispute_id);

ALTER TABLE dispute_status_history ADD CONSTRAINT fk_dispute_status_history_dispute_statuses FOREIGN KEY (dispute_status_id) REFERENCES dispute_statuses (dispute_status_id);
