// See: https://dbdocs.io/katlego.sekoele/GalaxyBankDB
Table users {
  user_id int [pk, increment]
  google_id varchar [not null, unique, note: 'External unique Google account ID for SSO.']
  username varchar [not null]
  email varchar [not null]
  role_id int [not null, ref: > roles.role_id]

  Note: 'Application users with assigned roles. Supports soft deletion.'
}

Table roles {
  role_id int [pk, increment]
  name varchar [not null, unique]

  Note: 'Enumeration table of the list of roles in the system from an application perspective'
}

Table accounts {
  account_id int [pk, increment]
  user_id int [not null, ref: > users.user_id]
  account_type_id int [not null, ref: > account_types.account_type_id]
  balance int [not null, note: 'Funds that are available for use.']
  created_at timestamp [default: `now()`]

  Note: 'Financial accounts tied to users.'
}

Table account_types {
  account_type_id int [pk, increment]
  name varchar [note: 'Label for the account type (e.g., savings, checking).']

  Note: 'Defines characteristics and fees for different account models.'
}

Table transactions {
  transaction_id int [pk, increment]
  transaction_reference_id int [not null, ref: > transaction_references.transaction_reference_id, note: 'used to link two (or more in the case of split payments) transactions together']
  reference varchar [note: 'The reference the user will see on their own account.']
  account_id int [not null, ref: > accounts.account_id]
  amount int [not null]
  transaction_type_id int [not null, ref: > transaction_types.transaction_type_id]
  created_at timestamp [not null, default: `now()`]
  balance_after_transaction int

  Note: 'Logs each monetary activity tied to an account with status tracking.'
}

Table transaction_references {
  transaction_reference_id int [pk, increment]

  Note: 'Groups related transactions under a common reference (e.g., for disputes or multi-account payments).'
}

Table transaction_types {
  transaction_type_id int [pk, increment]
  name varchar [not null, unique, note: 'e.g., deposit, withdrawal, transfer, reversals']

  Note: 'Enumerates valid types of financial activities.'
}

Table disputes {
  dispute_id int [pk, increment]
  reason varchar [not null]
  disputed_transaction_reference_id int [not null, ref: > transaction_references.transaction_reference_id]
  created_at timestamp [default: `now()`]

  Note: 'Filed disputes tied to a specific transaction reference group. Business rule -> you may not dispute a dispute (reverse a reversal).'
}

Table dispute_status_history {
  dispute_history_id int [pk, increment]
  dispute_id int [not null, ref: > disputes.dispute_id]
  dispute_status_id int [not null, ref: > dispute_statuses.dispute_status_id]
  updated_at timestamp [not null]
  updated_by_id int [not null]
  
  Note: 'Logs changes in dispute resolution status over time.'
}

Table dispute_statuses {
  dispute_status_id int [pk, increment]
  name varchar [not null, unique, note: 'e.g., open, under_review, resolved']

  Note: 'Possible statuses for a dispute lifecycle.'
}
